# sfu

./: .gitignore  AGENTS.md  CONTEXT.md  README.md
.github/workflows/: ci.yml
docs/: PRD.md
docs/adr/: 0001-stateless-token-minting-service.md  0002-stateless-oauth-handback-via-state.md  0003-token-custody-keychain-via-security-cli.md  0004-plausible-analytics-off-by-default.md
service/: CHECKS  app.json  package-lock.json  package.json  tsconfig.json
service/assets/: og.source.html
service/src/: app.test.ts  app.ts  app.tsx  config.test.ts  config.ts  content.ts  index.ts  styles.css
service/src/analytics/: clientIp.test.ts  clientIp.ts  plausible.test.ts  plausible.ts  track.ts
service/src/oauth/: returnUrl.test.ts  returnUrl.ts  routes.test.tsx  routes.tsx  scope.test.ts  scope.ts  slack.ts  state.test.ts  state.ts
service/src/views/: authStart.tsx  home.tsx  layout.tsx  legal.tsx  success.tsx
skill/: README.md  pyproject.toml
skill/slack-file-upload/: SKILL.md
skill/slack-file-upload/scripts/: slack-login  slack-upload
skill/slack-file-upload/scripts/slack_file_upload/: __init__.py  security_cli.py  slack_login.py  slack_upload.py  token_store.py  validity.py
skill/src/slack_file_upload/: security_cli.py  validity.py
skill/tests/: conftest.py  test_security_cli.py  test_skill_md.py  test_slack_login.py  test_slack_upload.py  test_token_store.py
