[project]
name = "slack-file-upload"
version = "0.1.0"
description = "Agent skill that uploads files to Slack as the user via a minted user token"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_file_upload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
