[project]
name = "slack-file-upload"
version = "0.1.0"
description = "Agent skill that uploads files to Slack as the user via a minted user token"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
slack-login = "slack_file_upload.slack_login:main"
slack-upload = "slack_file_upload.slack_upload:main"

[dependency-groups]
# pyyaml is test-only: it lets the SKILL.md tests parse the frontmatter the same
# way `npx skills` (a real YAML parser) does, catching invalid YAML the shipped
# Skill keeps zero runtime dependencies.
dev = ["pytest>=8", "pyyaml>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slack-file-upload/scripts/slack_file_upload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["slack-file-upload/scripts"]
